# Cesame

./: .gitignore  BarGraph.cpp  BarGraph.h  CMakeLists.txt  Cesame.pro  CesameClient.pro  CesameWindow.cpp  CesameWindow.h  Color.cpp  Color.h  CpuCoreGraph.cpp  CpuCoreGraph.h  CpuMonitor.cpp  CpuMonitor.h  GpuMonitor.cpp  GpuMonitor.h  Label.cpp  Label.h  LineGraph.cpp  LineGraph.h  MemoryMonitor.cpp  MemoryMonitor.h  MetricsManager.cpp  MetricsManager.h  Monitor.cpp  Monitor.h  MonitorTypes.h  NetworkMonitor.cpp  NetworkMonitor.h  README.md  Toto.txt  Utils.cpp  Utils.h  cesamebargraph.cpp  cesamebargraph.h  cesamecpucoregraph.cpp  cesamecpucoregraph.h  cesamelabel.cpp  cesamelabel.h  cesamelinegraph.cpp  (+13 more)
dependencies/: au.hh
src/Client/: TimeManager.cpp  TimeManager.h  main.cpp
src/Client/Exceptions/: Exceptions.h  NotImplementedException.h
src/Client/Metrics/: Metric.h  MetricType.cpp  MetricType.h
src/Client/Monitors/: CpuMonitor.cpp  CpuMonitor.h  GpuMonitor.cpp  GpuMonitor.h  LineGraphLabeled.cpp  MemoryMonitor.cpp  MemoryMonitor.h  Monitor.h
src/Client/Window/: MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h
src/Client/Window/Style/: ColorPalette.cpp  ColorPalette.h  ColorRange.cpp  ColorRange.h  StyleManager.cpp  StyleManager.h
src/Client/Window/Widgets/: Bar.cpp  Bar.h  CpuCoresBarGraph.cpp  CpuCoresBarGraph.h  Label.cpp  Label.h  LineGraph.cpp  LineGraph.h  LineGraphLabeled.cpp  LineGraphLabeled.h
tests/: ColorPaletteTests.cpp  ColorRangeTests.cpp
